Fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,10 @@ html, body {
 }
 
 .wrapper {
+  position: relative;
   max-width: 100%;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .btn.dark-purple {
@@ -726,7 +728,7 @@ margin: 0 0.3rem;
   }
 
 .right-section {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   order: 2;
@@ -741,14 +743,14 @@ margin: 0 0.3rem;
   }
 
   .side-bg img {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     
   }
 
   .side-bg {
     position: sticky;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     z-index: -1;
     bottom: 0;
